# tribot

./: .build.yml  .gitignore  README.markdown  bibot.cabal  cabal.project  flake.nix  stack.yaml  tribot.cabal
app/: LanguageModel.hs  Main.hs
src/: LanguageModel.hs  bibot.hs  tribot.hs
