name:                  tribot
category:              Network
build-type:            Simple
version:               0.3
synopsis:              Stupid trigram-powered, nonsense-spewing irc bot
description:           lol
license:               BSD3
License-file:          LICENSE
category:              Network
author:                Erlend Hamberg
maintainer:            ehamberg@gmail.com
stability:             experimental
tested-with:           GHC==7.0.1
cabal-version:         >=1.6

Executable tribot
    hs-source-dirs:    src
    main-is:           tribot.hs
    build-depends:     base >=4 && < 5, simpleirc >= 0.2 && < 0.3,
                       bytestring >= 0.9 && < 1.0, HDBC >= 2.2 && < 2.4,
                       HDBC-sqlite3 >= 2.3 && < 2.4, random >= 1.0 && < 1.1,
                       utf8-string >= 0.3 && < 0.4, mtl >= 2.0 && < 2.1,
                       stringsearch >= 0.3 && < 0.4
    ghc-options:       -Wall -O2 -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: git://github.com/ehamberg/tribot.git
