name:                  tribot
category:              Network
build-type:            Simple
version:               0.3
synopsis:              Stupid trigram-powered, nonsense-spewing irc bot
description:           lol
license:               BSD3
License-file:          LICENSE
category:              Network
author:                Erlend Hamberg
maintainer:            ehamberg@gmail.com
stability:             experimental
tested-with:           GHC==7.0.1
cabal-version:         >=1.6

Executable tribot
    hs-source-dirs:    src
    main-is:           tribot.hs
    other-modules:     LanguageModel
    build-depends:     base
                     , simpleirc
                     , bytestring
                     , HDBC
                     , HDBC-sqlite3
                     , random
                     , utf8-string
                     , mtl
                     , stringsearch
                     , time
    ghc-options:       -Wall

source-repository head
  type:     git
  location: git://github.com/ehamberg/tribot.git
