cabal-version:      3.4
name:               tribot
category:           Network
version:            0.4.0.0
synopsis:           Stupid trigram-powered, nonsense-spewing irc bot
license:            BSD-3-Clause
license-file:       LICENSE
author:             Erlend Hamberg
maintainer:         erlend@hamberg.no
build-type:         Simple

common warnings
    ghc-options: -Wall

executable tribot
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:     LanguageModel
    import:           warnings
    build-depends:     base
                     , simpleirc
                     , bytestring
                     , HDBC
                     , HDBC-sqlite3
                     , random
                     , utf8-string
                     , mtl
                     , stringsearch
                     , time
    default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/ehamberg/tribot.git
